# tlang

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.sbt
.github/workflows/: build.yml  website.yml
conformity/arithmetic/: Main.tlang  expected_output.txt
conformity/cross_file_import/: Main.tlang  Utils.tlang
conformity/else_if_program/: Main.tlang
conformity/expression_if_match_program/: Main.tlang
conformity/float_lib/: Main.tlang
conformity/for_program/: Main.tlang
conformity/function_calls/: Main.tlang
conformity/hash_in_string/: Main.tlang  expected_output.txt
conformity/hello_world/: Main.tlang
conformity/if_program/: Main.tlang
conformity/int_lib/: Main.tlang
conformity/kotlin_codegen/: Main.tlang  manifest.yml
conformity/leaf_inherit/: Main.tlang
conformity/let_model/: Main.tlang
conformity/list_lib/: Main.tlang
docs/: architecture.md  doc-templates.md  index.html  style-templates.md
examples/: StringTest.tlang
project/: plugins.sbt
prompts/: tlang-builtins.md  tlang-helpers.md  tlang-index.md  tlang-lang.md  tlang-mistakes.md  tlang-patterns.md  tlang-project.md  tlang-templates.md
src/: ast.rs  bytecode.rs  conformity_tests.rs  error_checker.rs  formatter.rs  lib.rs  loader.rs  main.rs  manifest.rs  mcp.rs  model_tree.rs  parser.rs  pdf_lib.rs  runtime.rs  tbag.rs  tlang.pest  tmpl_cmd_tree.rs  tmpl_data_tree.rs  tmpl_doc_tree.rs  tmpl_style_tree.rs  tmpl_tree.rs  tree_context.rs
src/cli/: args.rs  (+5 more)
website/: Homepage.tlang  Styles.tlang  manifest.yml
(+1451 files in other folders)
