[package]
name = "tlang"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A template language for structural code generation — AI writes the template, templates do the work."
authors = ["Joël Favre <joel@tlang.dev>"]
license = "Apache-2.0"
repository = "https://github.com/tlang-dev/tlang"
homepage = "https://tlang.dev"
documentation = "https://github.com/joel-f/tlang/tree/main/docs"
keywords = ["codegen", "template", "language", "compiler", "generator"]
categories = ["development-tools", "compilers", "template-engine"]

[dependencies]
pest = "2.8"
pest_derive = "2.8"
lsp-server = "0.7.9"
crossbeam-channel = "0.5"
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
printpdf = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
